--- a/mobile/package.json
+++ b/mobile/package.json
@@ -4,8 +4,8 @@
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll"
   },
@@ -19,29 +19,32 @@
     "@react-navigation/native": "^7.0.0",
     "@tabler/icons-react-native": "^3.22.0",
     "axios": "^1.7.7",
-    "expo": "~52.0.6",
+    "expo": "~52.0.11",
     "expo-font": "~13.0.1",
-    "expo-linking": "~7.0.2",
-    "expo-router": "~4.0.5",
-    "expo-splash-screen": "~0.29.9",
+    "expo-linking": "~7.0.3",
+    "expo-router": "~4.0.9",
+    "expo-splash-screen": "~0.29.13",
     "expo-status-bar": "~2.0.0",
-    "expo-system-ui": "~4.0.2",
+    "expo-system-ui": "~4.0.4",
     "expo-web-browser": "~14.0.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.1",
+    "react-native": "0.76.3",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.0.0",
+    "react-native-screens": "~4.1.0",
     "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
-    "react-native-gesture-handler": "~2.20.2"
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-maps": "1.18.0",
+    "expo-location": "~18.0.2",
+    "expo-camera": "~16.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~18.3.12",
     "jest": "^29.2.1",
-    "jest-expo": "~52.0.1",
+    "jest-expo": "~52.0.2",
     "react-test-renderer": "18.3.1",
     "typescript": "~5.3.3"
   },
