--- a/api/nestjs-api/.env.example
+++ b/api/nestjs-api/.env.example
@@ -1,4 +1,5 @@
-GOOGLE_MAPS_API_KEY=
-KAFKA_BROKER=kafka:9092
-
-DATABASE_URL="mongodb://root:root@mongo:27017/nest?authSource=admin&directConnection=true"
+GOOGLE_MAPS_API_KEY=""
+#KAFKA_BROKER="host.docker.internal:9094"
+KAFKA_BROKER="kafka:9092"
+NEST_API_URL="http://localhost:3000"
+DATABASE_URL=""
