--- a/api/next-frontend/.env.example
+++ b/api/next-frontend/.env.example
@@ -1,2 +1,4 @@
-NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=
-NEST_API_URL=
+NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=""
+NEST_API_URL="http://localhost:"
+NEXT_PUBLIC_NEXT_API_URL="http://localhost:3001/api"
+NEXT_PUBLIC_NEST_API_URL="http://localhost:" # For socketio connection in browser
