--- a/api/nestjs-api/package.json
+++ b/api/nestjs-api/package.json
@@ -20,17 +20,18 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@confluentinc/kafka-javascript": "^0.5.2",
+    "@confluentinc/kafka-javascript": "^1.3.2",
     "@googlemaps/google-maps-services-js": "^3.4.0",
+    "@nest/microservices": "^4.5.4",
     "@nestjs/axios": "^3.1.3",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.3.0",
-    "@nestjs/core": "^10.0.0",
+    "@nestjs/core": "^11.1.3",
     "@nestjs/mapped-types": "*",
-    "@nestjs/microservices": "^10.4.15",
-    "@nestjs/platform-express": "^10.0.0",
-    "@nestjs/platform-socket.io": "^10.4.15",
-    "@nestjs/websockets": "^10.4.15",
+    "@nestjs/microservices": "^11.1.3",
+    "@nestjs/platform-express": "^11.1.3",
+    "@nestjs/platform-socket.io": "^11.1.3",
+    "@nestjs/websockets": "^11.1.3",
     "@prisma/client": "^6.0.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
@@ -38,7 +39,7 @@
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
-    "@nestjs/testing": "^10.0.0",
+    "@nestjs/testing": "^11.1.3",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
@@ -50,6 +51,7 @@
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
+    "prisma": "^6.0.1",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
     "ts-jest": "^29.1.0",
