--- a/api/next-frontend/package.json
+++ b/api/next-frontend/package.json
@@ -12,7 +12,7 @@
     "@googlemaps/google-maps-services-js": "^3.4.0",
     "@googlemaps/js-api-loader": "^1.16.8",
     "lodash": "^4.17.21",
-    "next": "15.0.3",
+    "next": "^15.3.3",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "socket.io-client": "^4.8.1"
