--- a/mobile/package.json
+++ b/mobile/package.json
@@ -16,9 +16,12 @@
     "@expo-google-fonts/rubik": "^0.2.3",
     "@expo/vector-icons": "^14.0.2",
     "@gorhom/bottom-sheet": "^5.0.6",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/geolocation": "^3.4.0",
     "@react-navigation/native": "^7.0.0",
     "@reduxjs/toolkit": "^2.8.2",
+    "@rneui/themed": "^4.0.0-rc.8",
+    "@supabase/supabase-js": "^2.50.2",
     "@tabler/icons-react-native": "^3.22.0",
     "axios": "^1.7.7",
     "expo": "~52.0.46",
@@ -39,10 +42,12 @@
     "react-native-google-places-autocomplete": "^2.5.7",
     "react-native-maps": "^1.18.0",
     "react-native-maps-directions": "^1.9.0",
+    "react-native-paper": "^5.14.5",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
+    "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.13",
     "react-redux": "^9.2.0",
     "use-context-selector": "^2.0.0"
