--- a/ecotrip.mobile/package.json
+++ b/ecotrip.mobile/package.json
@@ -50,6 +50,7 @@
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.13",
     "react-redux": "^9.2.0",
+    "socket.io-client": "^4.8.1",
     "use-context-selector": "^2.0.0"
   },
   "devDependencies": {
