--- a/.github/workflows/eas-deploy.yml
+++ b/.github/workflows/eas-deploy.yml
@@ -7,46 +7,43 @@ on:
       - staging
 
 jobs:
-  fingerprint:
-    name: Fingerprint
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - name: Setup Node
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
-      - name: Install EAS CLI
-        run: npm install -g eas-cli
-      - name: Fingerprint
-        id: fingerprint
-        run: |
-          echo "ANDROID_HASH=$(eas fingerprint:generate --platform android --non-interactive)" >> $GITHUB_ENV
-          echo "IOS_HASH=$(eas fingerprint:generate --platform ios --non-interactive)" >> $GITHUB_ENV
-
   build_and_deploy:
     name: Build & Deploy
-    needs: fingerprint
     runs-on: ubuntu-latest
     env:
       EAS_TOKEN: ${{ secrets.EAS_TOKEN }}
     steps:
       - uses: actions/checkout@v4
+
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: 20
+
       - name: Install dependencies
         run: npm ci
-      - name: Install EAS CLI
-        run: npm install -g eas-cli
 
-      # Branch staging -> só OTA
+      - name: Install EAS CLI
+        run: npm install -g eas-cli@latest
+
+      - name: Generate Android Fingerprint
+        id: android_fp
+        run: |
+          ANDROID_HASH=$(eas fingerprint:generate --platform android --non-interactive --json | jq -r '.hash')
+          echo "ANDROID_HASH=$ANDROID_HASH" >> $GITHUB_ENV
+
+      - name: Generate iOS Fingerprint
+        id: ios_fp
+        run: |
+          IOS_HASH=$(eas fingerprint:generate --platform ios --non-interactive --json | jq -r '.hash')
+          echo "IOS_HASH=$IOS_HASH" >> $GITHUB_ENV
+
+      # OTA staging
       - name: Publish OTA (staging)
         if: github.ref == 'refs/heads/staging'
         run: eas update --branch staging --platform all --non-interactive
 
-      # Branch main -> build nativo + OTA
+      # Build produção nativa
       - name: Build Android (production)
         if: github.ref == 'refs/heads/main'
         run: eas build --platform android --profile production --non-interactive
@@ -55,6 +52,7 @@ jobs:
         if: github.ref == 'refs/heads/main'
         run: eas build --platform ios --profile production --non-interactive
 
+      # OTA produção
       - name: Publish OTA (production)
         if: github.ref == 'refs/heads/main'
         run: eas update --branch production --platform all --non-interactive
