--- a/.github/workflows/eas-deploy.yml
+++ b/.github/workflows/eas-deploy.yml
@@ -25,7 +25,7 @@ jobs:
         run: npm install -g eas-cli@latest
 
       - name: Login to EAS
-        run: eas login --token ${{ secrets.EAS_TOKEN }}
+        run: eas login --token ${{ secrets.EAS_UPDATE_ACCESS_TOKEN }}
 
       - name: Set environment
         run: |
