--- a/.github/workflows/eas-deploy.yml
+++ b/.github/workflows/eas-deploy.yml
@@ -50,15 +50,15 @@ jobs:
           fi
 
       - name: Publish OTA update
-        run: eas update --branch ${{ env.BRANCH }} --platform all --non-interactive
+        run: eas update --branch ${{ env.BRANCH }} --platform all --non-interactive --message "CI update from GitHub Actions"
 
       - name: Build Android APK
         if: env.HAS_NATIVE == 'true'
-        run: eas build --platform android --profile ${{ env.PROFILE }} --non-interactive
+        run: eas build --platform android --profile ${{ env.PROFILE }} --non-interactive --message "CI update from GitHub Actions"
 
       - name: Build iOS (if macOS)
         if: env.HAS_NATIVE == 'true' && runner.os == 'macOS'
-        run: eas build --platform ios --profile ${{ env.PROFILE }} --non-interactive
+        run: eas build --platform ios --profile ${{ env.PROFILE }} --non-interactive --message "CI update from GitHub Actions"
 
       - name: Upload Android artifact
         if: env.HAS_NATIVE == 'true'
