fix: supabase url

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 EXPO_PUBLIC_GOOGLE_MAPS_APIKEY=""
 EXPO_PUBLIC_REACT_NATIVE_SUPABASE_URL=""
 EXPO_PUBLIC_REACT_NATIVE_SUPABASE_ANON_KEY=""
+EXPO_PRIVATE_API_URL=""
