--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "socket.io-client": "^4.8.1",
     "use-context-selector": "^2.0.0",
     "expo-dev-client": "~5.0.20",
-    "expo-updates": "~0.27.4"
+    "expo-updates": "~0.27.4",
+    "expo-constants": "~17.0.8"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
