--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "axios": "^1.7.7",
     "expo": "~52.0.47",
     "expo-camera": "~16.0.18",
+    "expo-constants": "~17.0.8",
+    "expo-dev-client": "~5.0.20",
     "expo-font": "~13.0.1",
     "expo-linking": "~7.0.5",
     "expo-location": "~18.0.10",
@@ -33,6 +35,7 @@
     "expo-splash-screen": "~0.29.24",
     "expo-status-bar": "~2.0.1",
     "expo-system-ui": "~4.0.9",
+    "expo-updates": "~0.27.4",
     "expo-web-browser": "~14.0.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -47,14 +50,12 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
+    "react-native-toast-message": "^2.3.3",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.13",
     "react-redux": "^9.2.0",
     "socket.io-client": "^4.8.1",
-    "use-context-selector": "^2.0.0",
-    "expo-dev-client": "~5.0.20",
-    "expo-updates": "~0.27.4",
-    "expo-constants": "~17.0.8"
+    "use-context-selector": "^2.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
