--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
   },
   "dependencies": {
     "@expo-google-fonts/rubik": "^0.2.3",
-    "@expo/vector-icons": "^14.0.2",
+    "@expo/vector-icons": "^15.0.2",
     "@gorhom/bottom-sheet": "^5.0.6",
-    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/geolocation": "^3.4.0",
     "@react-navigation/native": "^7.0.0",
     "@reduxjs/toolkit": "^2.8.2",
@@ -24,47 +24,50 @@
     "@supabase/supabase-js": "^2.50.2",
     "@tabler/icons-react-native": "^3.22.0",
     "axios": "^1.7.7",
-    "expo": "~52.0.47",
-    "expo-camera": "~16.0.18",
-    "expo-constants": "~17.0.8",
-    "expo-dev-client": "~5.0.20",
-    "expo-font": "~13.0.1",
-    "expo-linking": "~7.0.5",
-    "expo-location": "~18.0.10",
-    "expo-router": "~4.0.21",
-    "expo-splash-screen": "~0.29.24",
-    "expo-status-bar": "~2.0.1",
-    "expo-system-ui": "~4.0.9",
-    "expo-updates": "~0.27.4",
-    "expo-web-browser": "~14.0.2",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-native": "0.76.9",
-    "react-native-gesture-handler": "~2.20.2",
+    "expo": "^54.0.13",
+    "expo-camera": "~17.0.8",
+    "expo-constants": "~18.0.9",
+    "expo-dev-client": "~6.0.15",
+    "expo-font": "~14.0.9",
+    "expo-linking": "~8.0.8",
+    "expo-location": "~19.0.7",
+    "expo-router": "~6.0.12",
+    "expo-screen-orientation": "~9.0.7",
+    "expo-splash-screen": "~31.0.10",
+    "expo-status-bar": "~3.0.8",
+    "expo-system-ui": "~6.0.7",
+    "expo-updates": "~29.0.12",
+    "expo-web-browser": "~15.0.8",
+    "geolib": "^3.3.4",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-native": "0.81.4",
+    "react-native-gesture-handler": "~2.28.0",
     "react-native-get-random-values": "^1.11.0",
     "react-native-google-places-autocomplete": "^2.5.7",
-    "react-native-maps": "^1.18.0",
+    "react-native-maps": "1.20.1",
     "react-native-maps-directions": "^1.9.0",
     "react-native-paper": "^5.14.5",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
-    "react-native-svg": "15.8.0",
+    "react-native-reanimated": "~4.1.1",
+    "react-native-safe-area-context": "^5.6.1",
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
     "react-native-toast-message": "^2.3.3",
     "react-native-url-polyfill": "^2.0.0",
-    "react-native-web": "~0.19.13",
+    "react-native-web": "^0.21.0",
+    "react-native-worklets": "0.5.1",
     "react-redux": "^9.2.0",
     "socket.io-client": "^4.8.1",
     "use-context-selector": "^2.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@types/react": "~18.3.12",
+    "@types/react": "~19.1.10",
     "@types/react-redux": "^7.1.34",
     "jest": "^29.2.1",
-    "jest-expo": "~52.0.6",
+    "jest-expo": "~54.0.12",
     "react-test-renderer": "18.3.1",
-    "typescript": "~5.3.3"
+    "typescript": "~5.9.2"
   },
   "private": true
 }
