--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@babel/core": "^7.25.2",
     "@types/react": "~19.1.10",
     "@types/react-redux": "^7.1.34",
+    "babel-plugin-module-resolver": "^5.0.2",
     "jest": "^29.2.1",
     "jest-expo": "~54.0.12",
     "react-test-renderer": "18.3.1",
