fix:driver websocket connecxion

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
+NODE_ENV=development # production | development
 EXPO_PUBLIC_GOOGLE_MAPS_APIKEY=""
 EXPO_PUBLIC_REACT_NATIVE_SUPABASE_URL=""
 EXPO_PUBLIC_REACT_NATIVE_SUPABASE_ANON_KEY=""
 EXPO_PRIVATE_API_URL=""
+EXPO_TOKEN=""
