--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ node_modules/
 dist/
 web-build/
 expo-env.d.ts
+release_outputs/
 
 # Native
 *.orig.*
@@ -35,3 +36,4 @@ yarn-error.*
 
 # typescript
 *.tsbuildinfo
+yarn.lock
