--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
+    "dev": "expo start --tunnel --go",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
@@ -24,24 +25,24 @@
     "@supabase/supabase-js": "^2.50.2",
     "@tabler/icons-react-native": "^3.22.0",
     "axios": "^1.7.7",
-    "expo": "^54.0.13",
+    "expo": "~54.0.32",
     "expo-camera": "~17.0.8",
-    "expo-constants": "~18.0.9",
+    "expo-constants": "~18.0.13",
     "expo-dev-client": "~6.0.15",
-    "expo-font": "~14.0.9",
+    "expo-font": "~14.0.11",
     "expo-linking": "~8.0.8",
     "expo-location": "~19.0.7",
-    "expo-router": "~6.0.12",
+    "expo-router": "~6.0.22",
     "expo-screen-orientation": "~9.0.7",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
     "expo-system-ui": "~6.0.7",
-    "expo-updates": "~29.0.12",
+    "expo-updates": "~29.0.16",
     "expo-web-browser": "~15.0.8",
     "geolib": "^3.3.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-native": "0.81.4",
+    "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-get-random-values": "^1.11.0",
     "react-native-google-places-autocomplete": "^2.5.7",
